# raspy

./: .gitignore  README.md
backend/: README.md  main.py  pyproject.toml  raspy.spec
backend/raspy/: __init__.py  __main__.py  app.py  config.py  vapid.py
backend/raspy/attachments/: __init__.py
backend/raspy/attachments/_dailyvibe/: __init__.py  fonts.py
backend/raspy/attachments/accounts/: __init__.py
backend/raspy/attachments/calendar/: __init__.py
backend/raspy/attachments/chat/: __init__.py
backend/raspy/attachments/connectivity/: __init__.py  netinfo.py
backend/raspy/attachments/contacts/: __init__.py
backend/raspy/attachments/dropbox/: __init__.py
backend/raspy/attachments/files/: __init__.py  safety.py
backend/raspy/attachments/identity/: __init__.py
backend/raspy/attachments/mail/: __init__.py
backend/raspy/attachments/notes/: __init__.py
backend/raspy/attachments/notifications/: __init__.py
backend/raspy/attachments/passwords/: __init__.py
backend/raspy/attachments/pomodoro/: __init__.py
backend/raspy/attachments/stats/: __init__.py  metrics.py
backend/raspy/attachments/terminal/: __init__.py
backend/raspy/attachments/todo/: __init__.py
backend/raspy/core/: __init__.py  app.py  contract.py  db.py  events.py  manifest.py  notifications.py  registry.py  static.py  system.py  ui.py  update_routes.py  updater.py  ws.py
backend/tests/: conftest.py  test_auth.py  test_calendar_attachment.py  test_channel.py  test_connectivity_attachment.py  test_files_confinement.py  test_identity_dropbox_chat.py  test_mail_attachment.py  test_notifications.py  test_passwords.py  test_spine.py  test_stats_attachment.py  test_stats_metrics.py  test_terminal_attachment.py  test_updater.py  test_vault.py
(+222 files in other folders)
