[project]
name = "raspy"
dynamic = ["version"]
description = "Raspy spine — modular FastAPI control plane for a personal Raspberry Pi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=23.1",
    "cryptography>=48.0.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.32",
    "pywebpush>=2.0",
]

[project.scripts]
raspy = "raspy.__main__:main"
raspy-vapid = "raspy.vapid:main"
raspy-auth = "raspy.core.auth.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pyinstaller>=6.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "raspy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["raspy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
